# avaliacao

./: Cargo.toml
db.db/: 000116.sst  IDENTITY  LOG  LOG.old.1684361081677847  LOG.old.1684374434587026  LOG.old.1684375662228910  LOG.old.1684375925218118  LOG.old.1684375972456594  LOG.old.1684376096567941  LOG.old.1684376771251452  LOG.old.1684377001208648  LOG.old.1684377046635058  LOG.old.1684377126677525  LOG.old.1684377771745352  LOG.old.1684378043286298  LOG.old.1684378227212512  LOG.old.1684378479710167  LOG.old.1684378638250755  LOG.old.1684379209137212  LOG.old.1684381060901992  LOG.old.1684381109079039  LOG.old.1684381209336125  LOG.old.1684381250485278  LOG.old.1684381306909673  LOG.old.1684381430677216  LOG.old.1684381594096697  LOG.old.1684381988943691  LOG.old.1684382011164561  LOG.old.1684382071065335  LOG.old.1684382358142245  LOG.old.1684382467135192  LOG.old.1684382523132161  LOG.old.1684382566679315  MANIFEST-000126
src/: index.html  main.rs
templates/: head.stpl  index.stpl  relatorio.stpl
