[package]
name = "avaliacao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
surrealdb = {version = "1.0.0-beta.9",  features = ["kv-rocksdb"]}
env_logger = "^0.9.0"
actix-files = "0.6.2"
log = "^0.4.14"
chrono = "0.4"
serde = "1.0.163"
sailfish = "0.6.1"
